syntax = "proto3";

option go_package = ".;pb";
option java_multiple_files = true;
option java_package = "com.aapanavyapar.aapanavyapar.services";


import "common-message.proto";

message SignInRequest {
  string apiKey = 55;
  string phoneNo = 56;
  string password = 57;
}

message SignInResponse {
      ResponseData responseData = 58;
}
