syntax = "proto3";

option go_package = ".;pb";
option java_multiple_files = true;
option java_package = "com.aapanavyapar.aapanavyapar.services";


message NewTokenRequest {
  string apiKey = 75;
  string refreshToken = 76;
}

message NewTokenResponse {
  string token = 77;
}
